@@ -128,7 +128,8 @@ let declare_instance_constant k pri global imps ?hook id term termtype =
     instance_hook k pri global imps ?hook (ConstRef kn);
     id
 
-let new_instance ?(global=false) ctx (instid, bk, cl) props ?(generalize=true)
+let new_instance ?(abstract=false) ?(global=false) ctx (instid, bk, cl) props
+    ?(generalize=true)
     ?(tac:Proof_type.tactic option) ?(hook:(global_reference -> unit) option) pri =
   let env = Global.env() in
   let evars = ref Evd.empty in
@@ -179,8 +180,10 @@ let new_instance ?(global=false) ctx (instid, bk, cl) props ?(generalize=true)
   evars := resolve_typeclasses env !evars;
   let sigma =  !evars in
   let subst = List.map (Evarutil.nf_evar sigma) subst in
-    if Lib.is_modtype () then
+    if abstract then
       begin
+	if not (Lib.is_modtype ()) then
+	  error "Declare Instance while not in Module Type.";
 	let _, ty_constr = instance_constructor k (List.rev subst) in
 	let termtype =
 	  let t = it_mkProd_or_LetIn ty_constr (ctx' @ ctx) in
